--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <!------------------------ NAVBAR -------------------------->
     <!-- MAIN NAVBAR -->
     <section class="main-navbar fixed-top">
-        <div class="sony-navbar row justify-content-end align-items-center pe-1">
-            <div class="col-1"><a href="#"><img src="./img/sony_logo.svg" alt="" class="img-fluid"></a></div>
+        <div class="row justify-content-end align-items-center pe-1 sony-navbar">
+            <div class="col-10"></div>
+            <div class="col-2"><a href="#"><img src="./img/sony_logo.svg" alt="" class="img-fluid"></a></div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-0">
             <div class="container-fluid">
@@ -69,7 +70,7 @@
     <!----------------------------- HEADER ------------------------------>
     <!-- HERO -->
     <header class="container-fluid mt-5 pt-5">
-        <section class="hero row align-items-end p-5 text-white">
+        <section class="row align-items-end text-white hero">
             <div class="col-lg-4">
                 <img src="./img/returnal-hero-banner-logo.png" alt="" class="w-50">
                 <h1 class="my-4">Rompi il cerchio</h1>
@@ -82,20 +83,20 @@
             </div>
         </section>
         <!-- HERO THUMBS -->
-        <section class="hero-thumbs row justify-content-center p-5">
-            <div class="col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal"
-                        class="img-fluid"></a></div>
-            <div class="col-md-4 col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
+        <section class="row justify-content-center py-5 hero-thumbs">
+            <div class="col-6 col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg"
+                        alt="Returnal" class="img-fluid"></a></div>
+            <div class="col-6 col-md-4 col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
                         alt="Ratchet and Clank" class="img-fluid"></a>
             </div>
-            <div class="col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal"
-                        class="img-fluid"></a></div>
-            <div class="col-md-4 col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
+            <div class="col-6 col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg"
+                        alt="Returnal" class="img-fluid"></a></div>
+            <div class="col-6 col-md-4 col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
                         alt="Ratchet and Clank" class="img-fluid"></a>
             </div>
-            <div class="col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal"
-                        class="img-fluid"></a></div>
-            <div class="col-md-4 col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
+            <div class="col-6 col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg"
+                        alt="Returnal" class="img-fluid"></a></div>
+            <div class="col-6 col-md-4 col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
                         alt="Ratchet and Clank" class="img-fluid"></a>
             </div>
         </section>
@@ -106,55 +107,55 @@
     <main>
         <!-- PS5 SECTION -->
         <div class="container">
-            <section class="ps5-explore row justify-content-center align-items-center text-center p-5">
+            <section class="row justify-content-center align-items-center text-center p-5 ps5-explore">
                 <div class="col-lg-12">
                     <p class="mb-0 text-main-blue">PLAY HAS NO LIMITS</p>
                     <h2 class="mb-4">Ecco la PlayStation 5</h2>
                     <p>Tuffati in nuove possibilità di gioco completamente inaspettate</p>
                 </div>
             </section>
-            <section class="ps5-details row justify-content-center align-items-center">
+            <section class="row justify-content-center align-items-center ps5-details">
                 <div class="col-md-5 col-lg-5">
                     <h2 class="mb-4">Console PlayStation 5</h2>
                     <p class="mb-4">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
                     <a href="#"><button type="button" class="btn bg-main-blue rounded-pill text-white">Maggiori
                             informazioni</button></a>
                 </div>
-                <div class=".col-md-6 col-lg-7"><img src="./img/playstation-5-thumb.png" alt="PlayStation 5"
+                <div class="col-md-7 col-lg-7"><img src="./img/playstation-5-thumb.png" alt="PlayStation 5"
                         class="img-fluid">
                 </div>
             </section>
         </div>
         <!-- PS5 ITEMS -->
         <div class="container-fluid">
-            <section class="ps5-items row justify-content-around align-items-center text-center p-5">
-                <div class="col py-3">
-                    <img src="./img/playstation-5-thumb.png" alt="PlayStation 5" class="img-fluid px-5">
-                    <p>Console PS5</p>
+            <section class="row text-center py-3 ps5-items">
+                <div class="col-4 py-4">
+                    <img src="./img/playstation-5-thumb.png" alt="PlayStation 5" class="img-fluid">
+                    <p class="show-only-md">Console PS5</p>
                 </div>
-                <div class="col py-3">
-                    <img src="./img/joypad-thumb.png" alt="Controller wireless" class="img-fluid px-5">
-                    <p>Controller wireless DualSense</p>
+                <div class="col-4 py-4">
+                    <img src="./img/joypad-thumb.png" alt="Controller wireless" class="img-fluid">
+                    <p class="show-only-md">Controller wireless DualSense</p>
                 </div>
-                <div class="col py-3">
-                    <img src="./img/headset-thumb.png" alt="Cuffie wireless" class="img-fluid px-5">
-                    <p>Cuffie wireless con microfono PULSE 3</p>
+                <div class="col-4 py-4">
+                    <img src="./img/headset-thumb.png" alt="Cuffie wireless" class="img-fluid">
+                    <p class="show-only-md">Cuffie wireless con microfono PULSE 3</p>
                 </div>
-                <div class="col py-3">
-                    <img src="./img/remote-thumb.png" alt="Telecomando" class="img-fluid px-5">
-                    <p>Telecomando Media</p>
+                <div class="col-4 py-4">
+                    <img src="./img/remote-thumb.png" alt="Telecomando" class="img-fluid">
+                    <p class="show-only-md">Telecomando Media</p>
                 </div>
-                <div class="col py-3">
-                    <img src="./img/camera-thumb.jpg" alt="Telecamera HD" class="img-fluid px-5">
-                    <p>Telecamera HD</p>
+                <div class="col-4 py-4">
+                    <img src="./img/camera-thumb.jpg" alt="Telecamera HD" class="img-fluid">
+                    <p class="show-only-md">Telecamera HD</p>
                 </div>
             </section>
         </div>
         <!-- IT TAKES TWO -->
         <div class="container-fluid">
-            <section class="hero-2 row align-items-end p-5 text-white">
+            <section class="row align-items-end pb-5 text-white hero-2">
                 <div class="col-lg-4">
-                    <img src="./img/it-takes-two-logo.png" alt="" class="w-50">
+                    <img src="./img/it-takes-two-logo.png" alt="" class="w-75">
                     <h1 class="my-4">Un'avventura cooperativa selvaggia ti attende</h1>
                     <p class="my-4">
                         Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un
@@ -166,67 +167,67 @@
                 </div>
             </section>
             <!-- NEW GAMES -->
-            <section class="new-games row justify-content-center bg-dark text-white p-5">
+            <section class="row justify-content-center bg-dark text-white py-5 new-games">
                 <div class="col-lg-12">
                     <h2 class="fs-2">Nuove uscite</h2>
                     <p class="fs-4">Giochi incredibili per PS4 e PS5 disponibili ora</p>
                 </div>
-                <div class="col-lg-2 mb-4">
+                <div class="col-6 col-lg-2 mb-4">
                     <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
                         class="img-fluid">
                     <p>Tony Hawk's Pro Skater 1+2</p>
                 </div>
-                <div class="col-lg-2 mb-4">
+                <div class="col-6 col-lg-2 mb-4">
                     <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
                         class="img-fluid">
                     <p>Crash Bandicoot 4: It's About Time</p>
                 </div>
-                <div class="col-lg-2 mb-4">
+                <div class="col-6 col-lg-2 mb-4">
                     <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
                         class="img-fluid">
                     <p>Tony Hawk's Pro Skater 1+2</p>
                 </div>
-                <div class="col-lg-2 mb-4">
+                <div class="col-6 col-lg-2 mb-4">
                     <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
                         class="img-fluid">
                     <p>Crash Bandicoot 4: It's About Time</p>
                 </div>
-                <div class="col-lg-2 mb-4">
+                <div class="col-6 col-lg-2 mb-4">
                     <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
                         class="img-fluid">
                     <p>Tony Hawk's Pro Skater 1+2</p>
                 </div>
-                <div class="col-lg-2 mb-4">
+                <div class="col-6 col-lg-2 mb-4">
                     <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
                         class="img-fluid">
                     <p>Crash Bandicoot 4: It's About Time</p>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-6 col-lg-2">
                     <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
                         class="img-fluid">
                     <p>Tony Hawk's Pro Skater 1+2</p>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-6 col-lg-2">
                     <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
                         class="img-fluid">
                     <p>Crash Bandicoot 4: It's About Time</p>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-6 col-lg-2">
                     <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
                         class="img-fluid">
                     <p>Tony Hawk's Pro Skater 1+2</p>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-6 col-lg-2">
                     <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
                         class="img-fluid">
                     <p>Crash Bandicoot 4: It's About Time</p>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-6 col-lg-2">
                     <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
                         class="img-fluid">
                     <p>Tony Hawk's Pro Skater 1+2</p>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-6 col-lg-2">
                     <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
                         class="img-fluid">
                     <p>Crash Bandicoot 4: It's About Time</p>
@@ -235,7 +236,7 @@
         </div>
         <!-- PS4 SECTION -->
         <div class="container">
-            <section class="ps4-explore row justify-content-center align-items-center text-center p-5">
+            <section class="row justify-content-center align-items-center text-center py-5 ps4-explore">
                 <div class="col-lg-12">
                     <h2 class="mb-4">Esplora PlayStation 4</h2>
                     <p>
@@ -244,7 +245,7 @@
                     </p>
                 </div>
             </section>
-            <section class="ps4-details row justify-content-center align-items-center py-5">
+            <section class="row justify-content-center align-items-center py-5 ps4-details">
                 <div class="col-lg-4">
                     <div class="card border-0">
                         <img src="./img/ps4-slim-homepage-image-block.jpg" class="card-img-top" alt="PlayStation 4">
@@ -281,7 +282,7 @@
         </div>
         <!-- PS PLUS -->
         <div class="container-fluid">
-            <section class="ps-plus-banner row align-items-center justify-content-between px-5">
+            <section class="row align-items-center justify-content-between py-5 ps-plus-banner">
                 <div class="col-lg-6">
                     <img src="./img/ps-plus-logo.png" alt="" class="w-50 mb-3">
                     <p>
@@ -292,13 +293,13 @@
                 </div>
                 <div class="col-lg-6">
                     <img src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="PS Plus Games"
-                        class="img-fluid">
+                        class="img-fluid show-only-md">
                 </div>
             </section>
         </div>
         <!-- PS STORE -->
         <div class="container">
-            <section class="ps-store row align-items-center justify-content-center text-center py-5">
+            <section class="row align-items-center justify-content-center text-center py-5 ps-store">
                 <div class="col-lg-12 pb-5">
                     <h2 class="mb-3">Nuovi sconti sul PlayStation Store</h2>
                     <p>
@@ -307,16 +308,16 @@
                     </p>
                 </div>
                 <div class="col-lg-4"><img src="./img/playstation-store-games-under-20-spotlight.jpg"
-                        alt="Giochi a meno" class="img-fluid"></div>
+                        alt="Giochi a meno" class="img-fluid mb-5"></div>
                 <div class="col-lg-4"><img src="./img/playstation-store-golden-week-sale-spotlight.jpg"
-                        alt="Settimana sconto" class="img-fluid"></div>
+                        alt="Settimana sconto" class="img-fluid mb-5"></div>
                 <div class="col-lg-4"><img src="./img/playstation-store-free-to-play-spotlight.png" alt="Free to Play"
-                        class="img-fluid"></div>
+                        class="img-fluid mb-5"></div>
             </section>
         </div>
         <!-- PS NOW -->
         <div class="container-fluid">
-            <section class="ps-now-banner row align-items-center justify-content-between text-white px-5">
+            <section class="row align-items-center justify-content-between text-white py-5 ps-now-banner">
                 <div class="col-lg-6">
                     <img src="./img/ps-now-logo-two-column.png" alt="PlayStation Now logo" class="w-50 mb-3">
                     <p>
@@ -326,28 +327,29 @@
                     <a href="#" class="btn bg-lightgrey rounded-pill text-dark mt-3">Esplora PlayStation Now</a>
                 </div>
                 <div class="col-lg-6">
-                    <img src="./img/ps-now-april-featured-image-block.png" alt="PS Plus Games" class="img-fluid">
+                    <img src="./img/ps-now-april-featured-image-block.png" alt="PS Plus Games"
+                        class="img-fluid show-only-md">
                 </div>
             </section>
         </div>
         <!-- SOCIAL MEDIAS -->
         <div class="container">
-            <section class="socials row justify-content-center align-items-center text-center p-5">
+            <section class="row justify-content-center align-items-center text-center py-5 socials">
                 <div class="col-lg-12 pb-5">
                     <h3>Seguici sui social media</h3>
                 </div>
-                <div class="col-lg-6 row mb-5">
-                    <div class="col-lg-3">
-                        <a href="#"><img src="./img/twitter.jpg" alt="Twitter" class="img-fluid"></a>
+                <div class="col-lg-12 row">
+                    <div class="col-6 col-lg-3">
+                        <a href="#"><img src="./img/twitter.jpg" alt="Twitter" class="img-fluid mb-5"></a>
                     </div>
-                    <div class="col-lg-3">
-                        <a href="#"><img src="./img/facebook.jpg" alt="Facebook" class="img-fluid"></a>
+                    <div class="col-6 col-lg-3">
+                        <a href="#"><img src="./img/facebook.jpg" alt="Facebook" class="img-fluid mb-5"></a>
                     </div>
-                    <div class="col-lg-3">
-                        <a href="#"><img src="./img/instagram.jpg" alt="Instagram" class="img-fluid"></a>
+                    <div class="col-6 col-lg-3">
+                        <a href="#"><img src="./img/instagram.jpg" alt="Instagram" class="img-fluid mb-5"></a>
                     </div>
-                    <div class="col-lg-3">
-                        <a href="#"><img src="./img/youtube.png" alt="YouTube" class="img-fluid"></a>
+                    <div class="col-6 col-lg-3">
+                        <a href="#"><img src="./img/youtube.png" alt="YouTube" class="img-fluid mb-5"></a>
                     </div>
                 </div>
             </section>
@@ -355,7 +357,7 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="container-fluid bg-blue-footer text-white p-5">
+    <footer class="container-fluid bg-blue-footer text-white py-5">
         <div class="row">
             <div class="col-lg-6 p-3">
                 <div>
